# python_lessons

./: .flake8  .pre-commit-config.yaml  .replit  README.md  pyproject.toml
lessons/: __init__.py
lessons/lesson1/: __init__.py  classwork.py  homework.py
lessons/lesson1/tests/: __init__.py  models.py  test_classwork.py  test_homework.py  test_lesson1.py
lessons/lesson2/: __init__.py  classwork.py  data_structures.py  homework.py
lessons/lesson2/tests/: __init__.py  models.py  test_classwork.py  test_data_structures.py  test_homework.py
lessons/lesson3/: __init__.py  classwork.py
lessons/lesson3/tests/: __init__.py  models.py  test_classwork.py
lessons/lesson4/: __init__.py  classwork.py  test_data.txt  use.py
lessons/lesson4/tests/: test_classwork.py
