[tool.poetry]
name = "lessons"
version = "0.1.0"
description = ""
authors = ["Pavel Kirilin <win10@list.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^6"
pydantic = "^1.7.3"
black = "^20.8b1"
flake8 = { version = "^3.8.4", optional = true }
wemake-python-styleguide = { version = "^0.14.1", optional = true }

[tool.poetry.extras]
flake = ["flake8", "wemake-python-styleguide"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
